footer alignment correct on desktop

--- a/test.css
+++ b/test.css
@@ -151,6 +151,7 @@ body {
     letter-spacing: 1px;
 }
 .footer-text {
+    margin: auto;
     text-align: center;
     text-decoration: none;
     color: #d4d4d4;
